# hyperschedule-scrapers

./: Dockerfile  Makefile  pyproject.toml  scrapers.json
hyperschedule/: __init__.py  util.py
scripts/: docker-install-project.sh  docker-install-system.sh
