[tool.poetry]
name = "hyperschedule-scrapers"
version = "0.1.0"
description = ""
authors = ["Radon Rosborough <radon.neon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.7"
frozendict = "^1.2"
lxml = "^4.3"
psutil = "^5.6"
python-dateutil = "^2.8"
requests = "^2.22"
selenium = "^3.141"
dateparser = "^0.7.1"
sendgrid = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
